# tabsly

./: .gitignore  README.md  pyproject.toml  requirements.txt
.claude/: launch.json
examples/: default_config.toml
src/guitartab_ai/: __init__.py  audio.py  cli.py  config.py  fretboard.py  midi.py  models.py  music.py  notes.py  optimize.py  pipeline.py  pitch.py  render.py
tests/: test_fretboard.py  test_music.py  test_notes.py  test_optimize.py  test_render.py
